--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-# CMake
-CMakeFiles/*
+# CMake generated files
+CMakeFiles/
+CMakeCache.txt
 cmake_install.cmake
+Makefile
+cmake-build-*/
